Got all the good notification stuff and all that.
Author: dustin
Date: 2000/11/06 10:04:48

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-365

--- a/java/java/servlet/dsservlet/Makefile
+++ b/java/java/servlet/dsservlet/Makefile
@@ -4,7 +4,7 @@ JAVAC=$(JAVAHOME)/bin/javac
 JAVA=$(JAVAHOME)/bin/java
 MYLIB=/home/dustin/lib/java
 C1=$(MYLIB)/jsdk.jar:$(MYLIB)/gifservlet.jar
-C2=$(MYLIB)/spy.jar
+C2=$(MYLIB)/spy.jar:$(MYLIB)/cos.jar
 CLASSPATH=$(C1):$(C2):.
 SERVLETRUNNER=/home/dustin/lib/java/JSDK2.0/bin/servletrunner
 
