--- a/java/java/servlet/dsservlet/Makefile
+++ b/java/java/servlet/dsservlet/Makefile
@@ -13,7 +13,7 @@ DEST=bleu.west.spy.net:/usr/local/apache/java/net/spy/temperature/
 # DEST=170.1.69.194:/usr/local/apache/java
 
 CLASSES=net/spy/dsservlet/DSBean.class net/spy/dsservlet/Show.class \
-	net/spy/dsservlet/FileServlet.class
+	net/spy/dsservlet/FileServlet.class net/spy/dsservlet/ShowLocator.class
 
 .SUFFIXES: .java .class .jar
 
