Added path to configuration in configure.in.
Author: dustin
Date: 2000/12/14 20:51:57

Added a help like message.

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-325

--- a/c/c/net/tcp/proxycgi/Makefile.in
+++ b/c/c/net/tcp/proxycgi/Makefile.in
@@ -1,11 +1,11 @@
 # Copyright (c) 1998  Dustin Sallings
-# $Id: Makefile.in,v 1.1 2000/01/16 04:37:10 dustin Exp $
+# $Id: Makefile.in,v 1.2 2000/12/14 20:51:57 dustin Exp $
 
 SHELL=/bin/sh
 CC=@CC@
 LINT=lint
 INCLUDES=-I.
-DEFINES=
+DEFINES=@DEFS@ -DCONFFILE=\"@CONFFILE@\"
 CFLAGS=@CFLAGS@ $(INCLUDES) $(DEFINES)
 LIBS=@LIBS@
 LDFLAGS=$(LIBS)
