Working on getting JDBC connections from DataSources vi...
Author: dustin
Date: 2001/01/25 09:42:59

Working on getting JDBC connections from DataSources via JNDI

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-376

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -8,8 +8,8 @@ RMIC=$(JAVAHOME)/bin/rmic
 JAVADOC=$(JAVAHOME)/bin/javadoc
 COMPILE=$(JAVAC)
 MYLIB=$(HOME)/lib/java
-C1=$(MYLIB)/jsdk.jar:$(MYLIB)/DBCB.jar:$(MYLIB)/postgresql.jar
-C2=$(MYLIB)/RHash.jar:$(MYLIB)/cos.jar
+C1=$(MYLIB)/jsdk.jar:$(MYLIB)/jdbc2_0-stdext.jar
+C2=$(MYLIB)/RHash.jar:$(MYLIB)/cos.jar:$(MYLIB)/jndi.jar
 C3=$(MYLIB)/oromatcher.jar
 CLASSPATH=$(C1):$(C2):$(C3):.
 
