Arranged the test stuff a bit.
Author: dustin
Date: 2001/01/27 09:14:00

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-378

--- a/java/java/servlet/test/Makefile
+++ b/java/java/servlet/test/Makefile
@@ -16,13 +16,14 @@ DEST=bleu.west.spy.net:/usr/local/apache/java/net/spy/test/
 # DEST=170.1.69.194:/usr/local/apache/java
 
 CLASSES=net/spy/test/TestTaker.class net/spy/test/TestSession.class \
-	net/spy/test/TestConfig.class net/spy/test/TestSessionSweeper.class \
+	net/spy/test/TestConfig.class \
 	net/spy/test/TestUser.class net/spy/test/TestTest.class \
-	net/spy/test/TestQuestion.class net/spy/test/TestAnswer.class
+	net/spy/test/TestQuestion.class net/spy/test/TestAnswer.class \
+	net/spy/test/Loader.class
 
 .SUFFIXES: .java .class .jar
 
-all: testtaker.jar
+all: $(CLASSES)
 
 testtaker.jar: $(CLASSES)
 	$(JAR) cv0f $@ $(CLASSES)
