Use vectors instead of arrays for storage.
Author: dustin
Date: 2001/01/27 23:24:55

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-379

--- a/java/java/servlet/test/Makefile
+++ b/java/java/servlet/test/Makefile
@@ -25,6 +25,8 @@ CLASSES=net/spy/test/TestTaker.class net/spy/test/TestSession.class \
 
 all: $(CLASSES)
 
+jar: testtaker.jar
+
 testtaker.jar: $(CLASSES)
 	$(JAR) cv0f $@ $(CLASSES)
 
