Moved all the protected stuff that should've been priva...
Author: dustin
Date: 2001/02/07 06:30:59

Moved all the protected stuff that should've been private to private.

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-387

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -83,7 +83,7 @@ SDEST=bleu.west.spy.net:/usr/local/apache/java
 all: $(CLASSES)
 
 doc: $(CLASSES)
-	$(JAVADOC) -public -d doc $(PACKAGES)
+	$(JAVADOC) -d doc $(PACKAGES)
 
 jar: spy.jar
 
