Every little tiny bit of information helps.
Author: dustin
Date: 2001/02/08 21:28:48

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-392

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -66,6 +66,8 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/db/CachedResultSet.class \
 	net/spy/db/SpyCacheDB.class
 
+	# net/spy/loader/ClassReLoader.class
+
 # Extra stuff to be cleaned
 GENERATED=net/spy/db/CachePreparedStatement.java \
 	net/spy/db/CachedResultSet.java
