Give me some type names, G.
Author: dustin
Date: 2001/03/11 11:50:59

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-402

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -64,7 +64,8 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/db/CachedResultSetStub.class \
 	net/spy/db/CachePreparedStatement.class \
 	net/spy/db/CachedResultSet.class \
-	net/spy/db/SpyCacheDB.class
+	net/spy/db/SpyCacheDB.class \
+	net/spy/db/TypeNames.class
 
 	# net/spy/loader/ClassReLoader.class
 
