--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -47,6 +47,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/util/InterfaceImplementor.class \
 	net/spy/util/QuickRun.class \
 	net/spy/util/Debug.class \
+	net/spy/util/Base64.class \
 	net/spy/util/SPGen.class \
 	'net/spy/util/SPGen$$Parameter.class' \
 	net/spy/pool/ObjectPool.class \
