Almost working Base64 filter streams.
Author: dustin
Date: 2001/03/31 10:01:37

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-425

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -48,6 +48,8 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/util/QuickRun.class \
 	net/spy/util/Debug.class \
 	net/spy/util/Base64.class \
+	net/spy/util/Base64OutputStream.class \
+	net/spy/util/Base64InputStream.class \
 	net/spy/util/SPGen.class \
 	'net/spy/util/SPGen$$Parameter.class' \
 	net/spy/pool/ObjectPool.class \
