Did a little work on cron. Have a lot more to do befor...
Author: dustin
Date: 2001/04/02 08:40:20

Did a little work on cron.  Have a lot more to do before it can be
useful.

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-428

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -75,7 +75,10 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/db/DBNull.class \
 	net/spy/db/DBSP.class \
 	net/spy/db/DBSQL.class \
-	net/spy/db/TypeNames.class
+	net/spy/db/TypeNames.class \
+	net/spy/cron/Job.class \
+	net/spy/cron/JobQueue.class \
+	net/spy/cron/Cron.class
 
 	# net/spy/loader/ClassReLoader.class
 
