Woohoo! stderr and stdout to multicast.
Author: dustin
Date: 2001/04/13 06:23:39

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-444

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -21,6 +21,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/log/SpyMessage.class \
 	net/spy/log/MCastLog.class \
 	net/spy/log/MCastListener.class \
+	net/spy/log/MessageOutputStream.class \
 	net/spy/SpyToker.class \
 	'net/spy/SpyConfig$$SpyConfigReader.class' net/spy/net/SNPP.class \
 	net/spy/net/HTTPFetch.class net/spy/SpyUtil.class net/spy/Syslog.class \
