Fix some stupid makefile stuff.
Author: dustin
Date: 2001/04/26 07:41:08

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-448

--- a/java/java/servlet/temperatures/Makefile
+++ b/java/java/servlet/temperatures/Makefile
@@ -1,10 +1,10 @@
 # Makefile for RHash, remote object server stuff.
 
-JAVAHOME=/usr/pkg/java
+JAVAHOME=/usr/java
 JAR=$(JAVAHOME)/bin/jar
-JAVAC=$(JAVAHOME)/bin/javac
+JAVAC=$(JAVAHOME)/bin/javac -deprecation
 JAVA=$(JAVAHOME)/bin/java
-MYLIB=/home/dustin/lib/java
+MYLIB=$(HOME)/lib/java
 C1=$(MYLIB)/jsdk.jar:$(MYLIB)/gifservlet.jar
 C2=$(MYLIB)/spy.jar
 CLASSPATH=$(C1):$(C2):.
