Fixed up some DB race conditions and errors and stuff.
Author: dustin
Date: 2001/05/21 23:05:41

Attempting to make the cache dump when inactive.

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-454

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -70,6 +70,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/pool/SNPPPoolFiller.class \
 	net/spy/pool/SNPPPoolAble.class \
 	net/spy/pool/PoolDebug.class \
+	net/spy/cache/SpyCacheStore.class \
 	net/spy/cache/SpyCache.class \
 	'net/spy/cache/SpyCache$$SpyCacheCleaner.class' \
 	'net/spy/cache/SpyCache$$SpyCacheItem.class' \
@@ -113,7 +114,7 @@ doc: $(CLASSES)
 jar: spy.jar
 
 spy.jar: $(CLASSES)
-	$(JAR) cv0f $@ $(CLASSES)
+	$(JAR) cv0f $@ `find net -name "*.class"`
 
 install: all
 	cp spy.jar $(FDEST)
