Need to detect sys/time.h
Author: dustin
Date: 2001/05/28 08:38:02

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-336

--- a/c/c/net/tcp/websplat/config.h.in
+++ b/c/c/net/tcp/websplat/config.h.in
@@ -20,3 +20,6 @@
 
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
+
+/* Define if you have the <sys/time.h> header file.  */
+#undef HAVE_SYS_TIME_H
