Promises, broken promises, etc...
Author: dustin
Date: 2001/06/07 07:51:11

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-467

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -62,6 +62,9 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	'net/spy/util/SPGen$$Parameter.class' \
 	net/spy/pool/ObjectPool.class \
 	'net/spy/pool/ObjectPool$$ObjectPoolCleaner.class' \
+	net/spy/util/NestedException.class \
+	net/spy/util/BrokenPromiseException.class \
+	net/spy/util/Promise.class \
 	net/spy/pool/PoolAble.class \
 	net/spy/pool/PoolContainer.class \
 	net/spy/pool/PoolException.class \
