Sockets that timeout.
Author: dustin
Date: 2001/07/02 23:31:56

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-471

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -25,6 +25,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/log/MessageOutputStream.class \
 	net/spy/SpyToker.class \
 	'net/spy/SpyConfig$$SpyConfigReader.class' net/spy/net/SNPP.class \
+	net/spy/net/TimedSocket.class \
 	net/spy/net/HTTPFetch.class net/spy/SpyUtil.class net/spy/Syslog.class \
 	net/spy/rmi/RObject.class \
 	net/spy/rmi/RObjectImpl.class \
