Added the multicast cache clearing action.
Author: dustin
Date: 2001/07/27 22:49:28

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-486

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -81,6 +81,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/cache/SpyCache.class \
 	'net/spy/cache/SpyCache$$SpyCacheCleaner.class' \
 	'net/spy/cache/SpyCache$$SpyCacheItem.class' \
+	net/spy/cache/CacheClearRequestListener.class \
 	net/spy/db/CachePreparedStatementStub.class \
 	net/spy/db/CachedResultSetStub.class \
 	net/spy/db/CachePreparedStatement.class \
