Added the thread pooler.
Author: dustin
Date: 2001/07/28 03:15:25

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-490

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -68,6 +68,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/util/BrokenPromiseException.class \
 	net/spy/util/Promise.class \
 	net/spy/util/PwGen.class \
+	net/spy/util/ThreadPool.class \
 	net/spy/pool/PoolAble.class \
 	net/spy/pool/PoolContainer.class \
 	net/spy/pool/PoolException.class \
