Added UU decoding input stream filter thing
Author: dustin
Date: 2001/08/08 09:38:35

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-497

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -57,6 +57,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/util/Base64.class \
 	net/spy/util/Base64OutputStream.class \
 	net/spy/util/Base64InputStream.class \
+	net/spy/util/UUInputStream.class \
 	net/spy/util/TimeStampedHash.class \
 	net/spy/util/Digest.class \
 	net/spy/util/SPGen.class \
