Load the images properly
Author: dustin
Date: 2001/12/21 05:53:10

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-534

--- a/java/java/servlet/house/Makefile
+++ b/java/java/servlet/house/Makefile
@@ -1,23 +1,19 @@
 # Makefile for RHash, remote object server stuff.
 
-JAVAHOME=/usr/pkg/java
+JAVAHOME=/usr
 JAR=$(JAVAHOME)/bin/jar
 JAVAC=$(JAVAHOME)/bin/javac
 JAVA=$(JAVAHOME)/bin/java
-MYLIB=/home/dustin/lib/java
+MYLIB=$(HOME)/lib/java
 C1=$(MYLIB)/jsdk.jar:$(MYLIB)/gifservlet.jar
 C2=$(MYLIB)/spy.jar
 CLASSPATH=$(C1):$(C2):.
-SERVLETRUNNER=/home/dustin/lib/java/JSDK2.0/bin/servletrunner
 
 CLASSES=net/spy/house/HouseServlet.class
 
 .SUFFIXES: .java .class .jar
 
 all: $(CLASSES)
-
-test: all
-	env CLASSPATH=$(CLASSPATH) $(SERVLETRUNNER) -d $(PWD)
 
 install: all
 	$(SCP) $(CLASSES) $(DEST)
@@ -26,4 +22,4 @@ clean:
 	rm -f $(CLASSES)
 
 .java.class:
-	env CLASSPATH=$(CLASSPATH) $(JAVAC) $<
+	env CLASSPATH=$(CLASSPATH) $(JAVAC) -deprecation $<
