Look for pthread.h
Author: dustin
Date: 2002/01/21 02:38:15

imported from: dustin@spy.net--projects/snippets--objc--1.0--patch-14

--- a/objc/objc/libdustin/configure.in
+++ b/objc/objc/libdustin/configure.in
@@ -14,7 +14,7 @@ AC_CHECK_LIB(objc, main)
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h unistd.h)
+AC_CHECK_HEADERS(fcntl.h unistd.h pthread.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
