--- a/objc/objc/libdustin/include/config.h.in
+++ b/objc/objc/libdustin/include/config.h.in
@@ -21,6 +21,9 @@
 /* Define if you have the <fcntl.h> header file.  */
 #undef HAVE_FCNTL_H
 
+/* Define if you have the <pthread.h> header file.  */
+#undef HAVE_PTHREAD_H
+
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
 
