New build system
Author: dustin
Date: 2002/02/05 01:24:23

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-361

--- a/c/c/misc/scrabble/Makefile.in
+++ b/c/c/misc/scrabble/Makefile.in
@@ -1,8 +1,11 @@
 # PROFILE=-pg
-CFLAGS=-O2 -Wall $(PROFILE)
-LDFLAGS=-g
+CC=@CC@
+CFLAGS=@CFLAGS@ @DEFS@ $(PROFILE)
+LDFLAGS=@LDFLAGS@
 OBJ=scoring.o dict.o search.o
 LIB=-L. -lscrabble
+RANLIB=@RANLIB@
+AR=@AR@
 
 all: search
 
@@ -16,8 +19,8 @@ scoring: scoring_main.o libscrabble.a
 	$(CC) $(PROFILE) $(LDFLAGS) -o $@ scoring_main.o $(LIB)
 
 libscrabble.a: $(OBJ)
-	ar rc $@ $(OBJ)
-	ranlib libscrabble.a
+	$(AR) rc $@ $(OBJ)
+	$(RANLIB) libscrabble.a
 
 dict_main.o: dict.c
 	$(CC) $(CFLAGS) $(PROFILE) -DDICT_MAIN -c -o $@ dict.c
