--- a/c/c/misc/scrabble/Makefile.in
+++ b/c/c/misc/scrabble/Makefile.in
@@ -2,14 +2,15 @@
 CC=@CC@
 CFLAGS=@CFLAGS@ @DEFS@ $(PROFILE)
 LDFLAGS=@LDFLAGS@
-OBJ=scoring.o dict.o search.o
+BOOTSTRAPOBJ=scoring_bootstrap.o dict_bootstrap.o
+OBJ=dictionary.o scores.o scoring.o dict.o search.o
 LIB=-L. -lscrabble
 RANLIB=@RANLIB@
 AR=@AR@
 
 all: search
 
-search: search_main.o libscrabble.a
+search: libscrabble.a search_main.o
 	$(CC) $(PROFILE) $(LDFLAGS) -o $@ search_main.o $(LIB)
 
 dict: dict_main.o libscrabble.a
@@ -20,7 +21,12 @@ scoring: scoring_main.o libscrabble.a
 
 libscrabble.a: $(OBJ)
 	$(AR) rc $@ $(OBJ)
-	$(RANLIB) libscrabble.a
+	$(RANLIB) $@
+
+# Bootstrap scrabble lib
+libbscrabble.a: $(BOOTSTRAPOBJ)
+	$(AR) rc $@ $(BOOTSTRAPOBJ)
+	$(RANLIB) $@
 
 dict_main.o: dict.c
 	$(CC) $(CFLAGS) $(PROFILE) -DDICT_MAIN -c -o $@ dict.c
@@ -31,6 +37,34 @@ search_main.o: search.c
 scoring_main.o: scoring.c
 	$(CC) $(CFLAGS) $(PROFILE) -DSCORING_MAIN -c -o $@ scoring.c
 
+scoring_bootstrap.o: scoring.c
+	$(CC) $(CFLAGS) $(PROFILE) -DBOOTSTRAP -c -o $@ scoring.c
+
+dict_bootstrap.o: dict.c
+	$(CC) $(CFLAGS) $(PROFILE) -DBOOTSTRAP -c -o $@ dict.c
+
+dict.c: dict.h
+
+scores.c: buildit
+	./buildit
+
+dictionary.h: buildit
+	./buildit
+
+dictionary.c: buildit
+	./buildit
+
+buildit: buildit.o libbscrabble.a
+	$(CC) $(CFLAGS) -o $@ buildit.o libbscrabble.a
+
+buildit.o:
+	$(CC) $(CFLAGS) $(PROFILE) -DBOOTSTRAP -c -o $@ buildit.c
+
 clean:
 	rm -f libscrabble.a dict_main.o search_main.o scoring_main.o \
-		$(OBJ) dict search scoring
+		$(OBJ) dict search scoring scores.c buildit buildit.o \
+		scoring_bootstrap.o dict_bootstrap.o dictionary.c libbscrabble.a \
+		dictionary.h
+
+distclean: clean
+	rm -f Makefile config.cache config.log config.status
