Added TTL stuff
Author: dustin
Date: 2002/02/13 21:13:40

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-541

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -95,6 +95,8 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/db/DBSP.class \
 	net/spy/db/DBSQL.class \
 	net/spy/db/TypeNames.class \
+	net/spy/db/DBTTL.class \
+	net/spy/db/DBTTLMonitor.class \
 	net/spy/cron/TimeIncrement.class \
 	net/spy/cron/Job.class \
 	net/spy/cron/JobQueue.class \
