Use PNG instead of GIF
Author: dustin
Date: 2002/02/22 09:58:07

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-546

--- a/java/java/servlet/temperatures/Makefile
+++ b/java/java/servlet/temperatures/Makefile
@@ -5,8 +5,8 @@ JAR=$(JAVAHOME)/bin/jar
 JAVAC=$(JAVAHOME)/bin/javac -deprecation
 JAVA=$(JAVAHOME)/bin/java
 MYLIB=$(HOME)/lib/java
-C1=$(MYLIB)/jsdk.jar:$(MYLIB)/gifservlet.jar
-C2=$(MYLIB)/spy.jar
+C1=$(MYLIB)/jsdk.jar
+C2=$(HOME)/prog/java/servlet/png:$(MYLIB)/spy.jar
 CLASSPATH=$(C1):$(C2):.
 
 CLASSES=net/spy/temperature/Temperature.class
