--- a/c/c/pgsql/Makefile
+++ b/c/c/pgsql/Makefile
@@ -1,13 +1,16 @@
 # Copyright (c) 1997  Dustin Sallings
-# $Id: Makefile,v 1.1 1997/10/01 07:06:28 dustin Exp $
+# $Id: Makefile,v 1.2 2002/02/27 10:15:35 dustin Exp $
 
 CFLAGS=-I/usr/local/pgsql/include
 LDFLAGS=-L/usr/local/pgsql/lib -lpq
 
-all: test
+all: test tablecounter
 
 test: test.o
 	$(CC) -o $@ test.o $(LDFLAGS)
+
+tablecounter: tablecounter.o
+	$(CC) -o $@ tablecounter.o $(LDFLAGS)
 
 clean:
 	rm -f test test.o
