Added another service.
Author: dustin
Date: 2002/03/05 10:42:48

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-552

--- a/java/java/servlet/rpc/Makefile
+++ b/java/java/servlet/rpc/Makefile
@@ -11,7 +11,8 @@ CLASSPATH=$(C1):.
 
 CLASSES=\
 	net/spy/rpc/XMLRPC.class \
-	net/spy/rpc/services/ZipCode.class
+	net/spy/rpc/services/ZipCode.class \
+	net/spy/rpc/services/Temperatures.class
 
 .SUFFIXES: .java .class .jar
 
