Added GIF support.
Author: dustin
Date: 2002/04/12 08:32:20

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-557

--- a/java/java/servlet/png/Makefile
+++ b/java/java/servlet/png/Makefile
@@ -5,7 +5,7 @@ JAR=$(JAVAHOME)/bin/jar
 JAVAC=$(JAVAHOME)/bin/javac -deprecation
 JAVA=$(JAVAHOME)/bin/java
 MYLIB=$(HOME)/lib/java
-C1=$(MYLIB)/jsdk.jar
+C1=$(MYLIB)/jsdk.jar:$(MYLIB)/acme.jar
 C2=$(MYLIB)/spy.jar
 CLASSPATH=$(C1):$(C2):.
 
